--- a/Episerver Alloy Demo/Web.config
+++ b/Episerver Alloy Demo/Web.config
@@ -20,7 +20,8 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <add key="ValidationSettings:UnobtrusiveValidationMode" value="None" />
     <add key="aspnet:UseTaskFriendlySynchronizationContext" value="true" />
-  <add key="GlobalNewsContainerID" value="" /></appSettings>
+    <add key="GlobalNewsContainerID" value="" />
+  </appSettings>
   <system.web>
     <httpRuntime targetFramework="4.7.2" requestValidationMode="2.0" />
     <compilation debug="true" targetFramework="4.7.2" optimizeCompilations="true" />
@@ -105,12 +106,14 @@
         <add extension=".jpeg" policy="DontCache" kernelCachePolicy="CacheUntilChange" duration="0.00:01:00" location="Any" />
       </profiles>
     </caching>
-  <handlers>
+    <handlers>
+      <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="GET,HEAD,POST,DEBUG,PUT,DELETE,PATCH,OPTIONS" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
       <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
       <remove name="OPTIONSVerbHandler" />
       <remove name="TRACEVerbHandler" />
-      <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="GET,HEAD,POST,DEBUG,PUT,DELETE,PATCH,OPTIONS" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
-    </handlers></system.webServer>
+      <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
+    </handlers>
+  </system.webServer>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
     <providers>
@@ -133,76 +136,76 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="EPiServer.ApplicationModules" publicKeyToken="8fe83dea738b45b7" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-11.11.3.0" newVersion="11.11.3.0" />
+        <bindingRedirect oldVersion="0.0.0.0-11.13.2.0" newVersion="11.13.2.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="EPiServer.Data.Cache" publicKeyToken="8fe83dea738b45b7" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-11.11.3.0" newVersion="11.11.3.0" />
+        <bindingRedirect oldVersion="0.0.0.0-11.13.2.0" newVersion="11.13.2.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="EPiServer.Data" publicKeyToken="8fe83dea738b45b7" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-11.11.3.0" newVersion="11.11.3.0" />
+        <bindingRedirect oldVersion="0.0.0.0-11.13.2.0" newVersion="11.13.2.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="EPiServer.Events" publicKeyToken="8fe83dea738b45b7" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-11.11.3.0" newVersion="11.11.3.0" />
+        <bindingRedirect oldVersion="0.0.0.0-11.13.2.0" newVersion="11.13.2.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="EPiServer.Framework" publicKeyToken="8fe83dea738b45b7" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-11.11.3.0" newVersion="11.11.3.0" />
+        <bindingRedirect oldVersion="0.0.0.0-11.13.2.0" newVersion="11.13.2.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="EPiServer.Licensing" publicKeyToken="8fe83dea738b45b7" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-11.11.3.0" newVersion="11.11.3.0" />
+        <bindingRedirect oldVersion="0.0.0.0-11.13.2.0" newVersion="11.13.2.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="EPiServer" publicKeyToken="8fe83dea738b45b7" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-11.11.3.0" newVersion="11.11.3.0" />
+        <bindingRedirect oldVersion="0.0.0.0-11.13.2.0" newVersion="11.13.2.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="EPiServer.Enterprise" publicKeyToken="8fe83dea738b45b7" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-11.11.3.0" newVersion="11.11.3.0" />
+        <bindingRedirect oldVersion="0.0.0.0-11.13.2.0" newVersion="11.13.2.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="EPiServer.LinkAnalyzer" publicKeyToken="8fe83dea738b45b7" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-11.11.3.0" newVersion="11.11.3.0" />
+        <bindingRedirect oldVersion="0.0.0.0-11.13.2.0" newVersion="11.13.2.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="EPiServer.Framework.AspNet" publicKeyToken="8fe83dea738b45b7" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-11.11.3.0" newVersion="11.11.3.0" />
+        <bindingRedirect oldVersion="0.0.0.0-11.13.2.0" newVersion="11.13.2.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="EPiServer.Cms.AspNet" publicKeyToken="8fe83dea738b45b7" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-11.11.3.0" newVersion="11.11.3.0" />
+        <bindingRedirect oldVersion="0.0.0.0-11.13.2.0" newVersion="11.13.2.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="EPiServer.Configuration" publicKeyToken="8fe83dea738b45b7" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-11.11.3.0" newVersion="11.11.3.0" />
+        <bindingRedirect oldVersion="0.0.0.0-11.13.2.0" newVersion="11.13.2.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="EPiServer.ImageLibrary" publicKeyToken="8fe83dea738b45b7" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-11.11.3.0" newVersion="11.11.3.0" />
+        <bindingRedirect oldVersion="0.0.0.0-11.13.2.0" newVersion="11.13.2.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="EPiServer.Web.WebControls" publicKeyToken="8fe83dea738b45b7" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-11.11.3.0" newVersion="11.11.3.0" />
+        <bindingRedirect oldVersion="0.0.0.0-11.13.2.0" newVersion="11.13.2.0" />
       </dependentAssembly>
       <probing privatePath="modulesbin" />
       <dependentAssembly>
         <assemblyIdentity name="EPiServer.Cms.Shell.UI" publicKeyToken="8fe83dea738b45b7" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-11.19.1.0" newVersion="11.19.1.0" />
+        <bindingRedirect oldVersion="0.0.0.0-11.23.0.0" newVersion="11.23.0.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="EPiServer.Shell" publicKeyToken="8fe83dea738b45b7" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-11.19.1.0" newVersion="11.19.1.0" />
+        <bindingRedirect oldVersion="0.0.0.0-11.23.0.0" newVersion="11.23.0.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="EPiServer.Shell.UI" publicKeyToken="8fe83dea738b45b7" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-11.19.1.0" newVersion="11.19.1.0" />
+        <bindingRedirect oldVersion="0.0.0.0-11.23.0.0" newVersion="11.23.0.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="EPiServer.UI" publicKeyToken="8fe83dea738b45b7" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-11.19.1.0" newVersion="11.19.1.0" />
+        <bindingRedirect oldVersion="0.0.0.0-11.23.0.0" newVersion="11.23.0.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="EPiServer.Cms.TinyMce" publicKeyToken="8fe83dea738b45b7" culture="neutral" />
@@ -224,18 +227,49 @@
         <assemblyIdentity name="EPiServer.Logging.Log4Net" publicKeyToken="8fe83dea738b45b7" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-2.2.2.0" newVersion="2.2.2.0" />
       </dependentAssembly>
-    <dependentAssembly><assemblyIdentity name="EPiServer.Find" publicKeyToken="8fe83dea738b45b7" culture="neutral" /><bindingRedirect oldVersion="0.0.0.0-13.0.5.0" newVersion="13.0.5.0" /></dependentAssembly><dependentAssembly><assemblyIdentity name="EPiServer.Find.Framework" publicKeyToken="8fe83dea738b45b7" culture="neutral" /><bindingRedirect oldVersion="0.0.0.0-13.0.5.0" newVersion="13.0.5.0" /></dependentAssembly><dependentAssembly><assemblyIdentity name="EPiServer.Find.Blocks" publicKeyToken="8fe83dea738b45b7" culture="neutral" /><bindingRedirect oldVersion="0.0.0.0-1.0.0.0" newVersion="1.0.0.0" /></dependentAssembly><dependentAssembly><assemblyIdentity name="EPiServer.Find.Cms" publicKeyToken="8fe83dea738b45b7" culture="neutral" /><bindingRedirect oldVersion="0.0.0.0-13.0.5.0" newVersion="13.0.5.0" /></dependentAssembly><dependentAssembly><assemblyIdentity name="EPiServer.Find.Optimizations" publicKeyToken="8fe83dea738b45b7" culture="neutral" /><bindingRedirect oldVersion="0.0.0.0-13.0.5.0" newVersion="13.0.5.0" /></dependentAssembly><dependentAssembly><assemblyIdentity name="EPiServer.Find.Statistics" publicKeyToken="8fe83dea738b45b7" culture="neutral" /><bindingRedirect oldVersion="0.0.0.0-13.0.5.0" newVersion="13.0.5.0" /></dependentAssembly><dependentAssembly><assemblyIdentity name="EPiServer.Find.UI" publicKeyToken="8fe83dea738b45b7" culture="neutral" /><bindingRedirect oldVersion="0.0.0.0-13.0.5.0" newVersion="13.0.5.0" /></dependentAssembly><dependentAssembly><assemblyIdentity name="EPiServer.Cms.UI.AspNetIdentity" publicKeyToken="8fe83dea738b45b7" culture="neutral" /><bindingRedirect oldVersion="0.0.0.0-11.19.1.0" newVersion="11.19.1.0" /></dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="EPiServer.Find" publicKeyToken="8fe83dea738b45b7" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-13.0.5.0" newVersion="13.0.5.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="EPiServer.Find.Framework" publicKeyToken="8fe83dea738b45b7" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-13.0.5.0" newVersion="13.0.5.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="EPiServer.Find.Blocks" publicKeyToken="8fe83dea738b45b7" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-1.0.0.0" newVersion="1.0.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="EPiServer.Find.Cms" publicKeyToken="8fe83dea738b45b7" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-13.0.5.0" newVersion="13.0.5.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="EPiServer.Find.Optimizations" publicKeyToken="8fe83dea738b45b7" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-13.0.5.0" newVersion="13.0.5.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="EPiServer.Find.Statistics" publicKeyToken="8fe83dea738b45b7" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-13.0.5.0" newVersion="13.0.5.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="EPiServer.Find.UI" publicKeyToken="8fe83dea738b45b7" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-13.0.5.0" newVersion="13.0.5.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="EPiServer.Cms.UI.AspNetIdentity" publicKeyToken="8fe83dea738b45b7" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-11.23.0.0" newVersion="11.23.0.0" />
+      </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Microsoft.Owin" publicKeyToken="31bf3856ad364e35" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-3.0.1.0" newVersion="3.0.1.0" />
+        <bindingRedirect oldVersion="0.0.0.0-3.1.0.0" newVersion="3.1.0.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Microsoft.Owin.Security.OAuth" publicKeyToken="31bf3856ad364e35" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-3.1.0.0" newVersion="3.1.0.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Microsoft.Owin.Security" publicKeyToken="31bf3856ad364e35" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-3.1.0.0" newVersion="3.1.0.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Microsoft.Owin.Security.Cookies" publicKeyToken="31bf3856ad364e35" culture="neutral" />
@@ -245,16 +279,29 @@
         <assemblyIdentity name="WebGrease" publicKeyToken="31bf3856ad364e35" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-1.5.2.14234" newVersion="1.5.2.14234" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Web.Http" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-5.2.3.0" newVersion="5.2.3.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Net.Http.Formatting" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-5.2.3.0" newVersion="5.2.3.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Web.Http.WebHost" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-5.2.3.0" newVersion="5.2.3.0" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
   <episerver>
     <applicationSettings httpCacheability="Public" pageValidateTemplate="false" uiShowGlobalizationUserInterface="true" uiUrl="~/EPiServer/CMS/" urlRebaseKind="ToRootRelative" uiEditorCssPaths="~/Static/css/Editor.css" uiSafeHtmlTags="b,i,u,br,em,strong,p,a,img,ol,ul,li" />
-  <imageEditor windowWidth="900" windowHeight="600" enabled="true">
+    <imageEditor windowWidth="900" windowHeight="600" enabled="true">
       <sizePresets>
         <preset name="320*240" width="320" height="240" />
         <preset name="640*480" width="640" height="480" />
       </sizePresets>
-    </imageEditor></episerver>
+    </imageEditor>
+  </episerver>
   <episerver.framework>
     <appData basePath="App_Data" />
     <scanAssembly forceBinFolderScan="true" />
@@ -273,12 +320,14 @@
       <clear />
       <add name="ProtectedModules" virtualPath="~/EPiServer/" physicalPath="Modules\_Protected" type="EPiServer.Web.Hosting.VirtualPathNonUnifiedProvider, EPiServer.Framework.AspNet" />
     </virtualPathProviders>
-  <localization fallbackBehavior="Echo, MissingMessage, FallbackCulture" fallbackCulture="en">
+    <localization fallbackBehavior="Echo, MissingMessage, FallbackCulture" fallbackCulture="en">
       <providers>
         <add virtualPath="~/Resources/LanguageFiles" name="languageFiles" type="EPiServer.Framework.Localization.XmlResources.FileXmlLocalizationProvider, EPiServer.Framework.AspNet" />
       </providers>
-    </localization></episerver.framework>
-  <!-- 'Static' location added to configure for static files only --><location path="Modules/_Protected">
+    </localization>
+  </episerver.framework>
+  <!-- 'Static' location added to configure for static files only -->
+  <location path="Modules/_Protected">
     <system.webServer>
       <validation validateIntegratedModeConfiguration="false" />
       <handlers>
@@ -360,34 +409,37 @@
   <episerver.shell>
     <publicModules rootPath="~/modules/" autoDiscovery="Modules" />
     <protectedModules rootPath="~/EPiServer/">
-      <add name="Shell" />
-      <add name="CMS" />
       <add name="EPiServer.Cms.TinyMce" />
-    <add name="Find">
+      <add name="Find">
         <assemblies>
           <add assembly="EPiServer.Find.UI" />
           <add assembly="EPiServer.Find.Blocks" />
           <add assembly="EPiServer.Find.Cms" />
           <add assembly="EPiServer.Find.Framework" />
         </assemblies>
-      </add></protectedModules>
+      </add>
+      <add name="Shell" />
+      <add name="CMS" />
+    </protectedModules>
   </episerver.shell>
   <connectionStrings>
     <add name="EPiServerDB" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|EPiServerDB_ce50e760.mdf;Initial Catalog=EPiServerDB_ce50e760;Connection Timeout=60;Integrated Security=True;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <episerver.find serviceUrl="http://YOUR_URI/" defaultIndex="YOUR_INDEX" />
-<location path="Views/Plugins">
+  <location path="Views/Plugins">
     <system.web>
       <authorization>
         <allow roles="WebAdmins, WebEditors, Administrators" />
         <deny users="*" />
       </authorization>
     </system.web>
-  </location><location path="Static">
+  </location>
+  <location path="Static">
     <system.webServer>
       <handlers>
         <clear />
         <add name="StaticFile" path="*" verb="*" modules="StaticFileModule" resourceType="File" requireAccess="Read" />
       </handlers>
     </system.webServer>
-  </location></configuration>
+  </location>
+</configuration>
