Created a initialization module that allow for API calls to ContentDeliverAPI without registration

--- a/Episerver Alloy Demo/Episerver Alloy Demo.csproj
+++ b/Episerver Alloy Demo/Episerver Alloy Demo.csproj
@@ -320,6 +320,7 @@
     <Compile Include="Business\EditorDescriptors\StringListEditorDescriptor.cs" />
     <Compile Include="Business\IModifyLayout.cs" />
     <Compile Include="Business\Initialization\BundleConfig.cs" />
+    <Compile Include="Business\Initialization\ContentDeliveryApiInitialization.cs" />
     <Compile Include="Business\Initialization\CustomizedRenderingInitialization.cs" />
     <Compile Include="Business\Initialization\DependencyResolverInitialization.cs" />
     <Compile Include="Business\Initialization\DisplayModesInitialization.cs" />
